--- a/Social_App/Base.lproj/Main.storyboard
+++ b/Social_App/Base.lproj/Main.storyboard
@@ -280,16 +280,16 @@
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="iV3-QT-NbS">
-                                <rect key="frame" x="48" y="85" width="100" height="100"/>
+                                <rect key="frame" x="48" y="109" width="100" height="100"/>
                                 <constraints>
                                     <constraint firstAttribute="height" constant="100" id="pkP-HM-Laa"/>
                                     <constraint firstAttribute="width" constant="100" id="x31-PD-E9N"/>
                                 </constraints>
                             </imageView>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="xTO-6a-Rhy">
-                                <rect key="frame" x="181" y="85" width="79" height="21"/>
+                                <rect key="frame" x="181" y="109" width="399" height="40"/>
                                 <constraints>
-                                    <constraint firstAttribute="width" constant="79" id="syX-hG-zC3"/>
+                                    <constraint firstAttribute="height" constant="40" id="qY7-0c-7F8"/>
                                 </constraints>
                                 <fontDescription key="fontDescription" type="system" weight="semibold" pointSize="17"/>
                                 <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
@@ -298,10 +298,11 @@
                         </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                         <constraints>
-                            <constraint firstItem="iV3-QT-NbS" firstAttribute="top" secondItem="Zy0-q9-pRY" secondAttribute="bottom" constant="65" id="7YG-E3-BG2"/>
+                            <constraint firstItem="iV3-QT-NbS" firstAttribute="top" secondItem="Zy0-q9-pRY" secondAttribute="bottom" constant="45" id="7YG-E3-BG2"/>
                             <constraint firstItem="xTO-6a-Rhy" firstAttribute="top" secondItem="iV3-QT-NbS" secondAttribute="top" id="JYw-RJ-lq1"/>
                             <constraint firstItem="xTO-6a-Rhy" firstAttribute="leading" secondItem="iV3-QT-NbS" secondAttribute="trailing" constant="33" id="SAb-bg-Bww"/>
-                            <constraint firstItem="xTO-6a-Rhy" firstAttribute="top" secondItem="Zy0-q9-pRY" secondAttribute="bottom" constant="65" id="eAf-me-eZT"/>
+                            <constraint firstItem="xTO-6a-Rhy" firstAttribute="trailing" secondItem="GdF-eI-DJA" secondAttribute="trailingMargin" id="dQN-Zr-03l"/>
+                            <constraint firstItem="xTO-6a-Rhy" firstAttribute="top" secondItem="Zy0-q9-pRY" secondAttribute="bottom" constant="45" id="eAf-me-eZT"/>
                             <constraint firstItem="iV3-QT-NbS" firstAttribute="leading" secondItem="GdF-eI-DJA" secondAttribute="leadingMargin" constant="28" id="pGm-fE-wdm"/>
                         </constraints>
                     </view>
@@ -312,7 +313,7 @@
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="MKH-E6-i1p" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="5960" y="86"/>
+            <point key="canvasLocation" x="5959" y="80"/>
         </scene>
         <!--Add Image-->
         <scene sceneID="INK-TH-iwM">
@@ -405,13 +406,37 @@
                         <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="b69-V1-yVm">
-                                <rect key="frame" x="20" y="28" width="113" height="105"/>
+                            <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" misplaced="YES" translatesAutoresizingMaskIntoConstraints="NO" id="b69-V1-yVm">
+                                <rect key="frame" x="20" y="61" width="113" height="105"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="100" id="5Hn-SR-heV"/>
+                                    <constraint firstAttribute="width" constant="100" id="YOM-0d-FNh"/>
+                                </constraints>
                             </imageView>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Mol-ha-g82">
+                                <rect key="frame" x="145" y="60" width="435" height="35"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="35" id="Aqi-6I-DAR"/>
+                                </constraints>
+                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
+                                <nil key="highlightedColor"/>
+                            </label>
                         </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                        <constraints>
+                            <constraint firstItem="Mol-ha-g82" firstAttribute="trailing" secondItem="Hg5-Gu-PXm" secondAttribute="trailingMargin" id="2RB-nZ-107"/>
+                            <constraint firstItem="Mol-ha-g82" firstAttribute="top" secondItem="BgE-X6-ctw" secondAttribute="bottom" constant="40" id="Epm-nW-if2"/>
+                            <constraint firstItem="b69-V1-yVm" firstAttribute="leading" secondItem="Hg5-Gu-PXm" secondAttribute="leadingMargin" id="Sai-H3-dS9"/>
+                            <constraint firstItem="Mol-ha-g82" firstAttribute="leading" secondItem="b69-V1-yVm" secondAttribute="trailing" constant="25" id="r52-CW-vCc"/>
+                            <constraint firstItem="b69-V1-yVm" firstAttribute="top" secondItem="BgE-X6-ctw" secondAttribute="bottom" constant="40" id="vvU-v7-pLc"/>
+                        </constraints>
                     </view>
                     <tabBarItem key="tabBarItem" title="Profile" image="profileimg" id="ekS-Fa-CbZ"/>
+                    <connections>
+                        <outlet property="profileImage" destination="b69-V1-yVm" id="dmI-jX-sXb"/>
+                        <outlet property="usernameLbl" destination="Mol-ha-g82" id="okF-c1-GfN"/>
+                    </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="4n1-74-Hj4" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
